substrate/primitives/api/test/tests/ui/invalid_api_version_2.stderr
error: Unexpected `api_version` attribute. The supported format is `api_version(1)`
  --> tests/ui/invalid_api_version_2.rs:19:2
   |
19 |     #[api_version("1")]
   |     ^
